# ese

./: .gitignore  CLAUDE.md  PLAN.md  benchmark_after.txt  benchmark_baseline.txt  logi.md  pyproject.toml  reflection.md
.claude/: settings.json
EU_ERN/: README.md  ern_config.json  ern_content_curator.py  ern_discovery_tool.py  ern_md_to_pdf.py  ern_scapper.py  test.py
EU_guidelines/: README.md  eu_pharma_guidelines_scraper.py  eu_pharma_rag_extractor.py
FDA/: FDA_SYNCER.md  fda_data_quality_check.py  flatten_files.py  sync.py  syncher.py  syncher_data_quality_checker.py  syncher_keys.py  syncher_therapeutic_areas.py  test.py  test_fda_syncher.py  test_incremental_saving.py  test_therapeutic_areas.py
FDA_guidance/: README.md  fda_scraper.py  flatten_files.py
corpus_config/: config.yaml
corpus_golden_datasets/: golden_datasets.xlsx
corpus_metadata/: ABBR.MD  CODE_QUALITY_REPORT.md  EXTRACTOR.MD  __init__.py  abbreviation_debugger.py  document_disease_ontology_download.py  document_intelligent_renamer.py  document_metadata_converter.py  document_metadata_db_report.py  document_metadata_extraction.py  document_metadata_extraction_abbreviation.py  document_metadata_extraction_basic.py  document_metadata_extraction_citation.py  document_metadata_extraction_disease.py  document_metadata_extraction_drug.py  document_metadata_extraction_persons.py  document_metadata_extraction_references.py  document_metadata_reader.py  document_report.py  orchestrator.py  orchestrator_utils.py  pytest.ini  requirements.txt  ruff.toml  run_extraction.py  test_01.py  test_02.py
(+9912 files in other folders)
